# api/server.go
@@ -1,10 +1,13 @@
 package api
 
 import (
+	"fmt"
 	"net/http"
 
 	db "github.com/danielmoisa/neobank/db/sqlc"
 	_ "github.com/danielmoisa/neobank/docs"
+	"github.com/danielmoisa/neobank/tokens"
+	"github.com/danielmoisa/neobank/utils"
 	"github.com/go-playground/validator/v10"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
@@ -12,12 +15,19 @@ import (
 )
 
 type Server struct {
-	store  db.Store
-	router *echo.Echo
+	store      db.Store
+	router     *echo.Echo
+	tokenMaker tokens.Maker
+	config     utils.Config
 }
 
-func NewServer(store db.Store) *Server {
-	server := &Server{store: store}
+func NewServer(config utils.Config, store db.Store) (*Server, error) {
+	tokenMaker, err := tokens.NewPasetoMaker(config.TokenSymmetricKey)
+	if err != nil {
+		return nil, fmt.Errorf("cannot create token maker: %w", err)
+	}
+
+	server := &Server{store: store, tokenMaker: tokenMaker, config: config}
 	router := echo.New()
 
 	// Register validator
@@ -34,9 +44,10 @@ func NewServer(store db.Store) *Server {
 	router.GET("/accounts", server.listAccounts)
 	router.POST("/payments", server.createPayment)
 	router.POST("/users", server.createUser)
+	router.POST("/users/login", server.loginUser)
 
 	server.router = router
-	return server
+	return server, nil
 }
 
 // Start runs the HTTP server on a specific address.
